# hermes-a2a-bridge

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  plugin.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  package.yml  release-check.yml
docs/: EXTERNAL_INTEROP.md  FILE_BOUNDARY_STATUS.md  FILE_PARTS_DESIGN.md  INBOUND_FILE_PARTS_DESIGN.md  INTEROP.md  RELEASE_CHECKLIST.md
hermes_a2a_bridge/: __init__.py  __main__.py  _version.py  auth.py  cli.py  client.py  config.py  diagnostics.py  errors.py  executor.py  files.py  install_doctor.py  models.py  operations.py  schemas.py  server.py  store.py  streaming.py  tools.py
hermes_a2a_bridge/skills/a2a-bridge/: SKILL.md
tests/: conftest.py  fake_external_a2a.py  local_http_json_peer.py  official_sdk_harness.py  raw_capture_harness.py  stored_file_id_e2e_harness.py  test_agent_card.py  test_auth.py  test_blackbox_fixtures.py  test_cli.py  test_client.py  test_config.py  test_diagnostics.py  test_executor.py  test_external_interop.py  test_file_boundary_audit.py  test_files.py  test_inbound_file_id_references.py  test_install_doctor.py  test_interop_fixtures.py  test_local_http_json_peer.py  test_official_sdk_integration.py  test_package_metadata.py  test_raw_capture_harness.py  test_reliability_v023.py  test_reliability_v024.py  test_server_routes.py  test_smoke.py  test_store.py  test_stored_file_id_e2e.py  test_streaming.py  test_tools.py
tests/fixtures/a2a/: replay_gap_error.json  (+19 more)
(+118 files in other folders)
